kubernetes/flux/apps/home/media/sonarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
spec:
  rules:
    - host: sonarr.apps.blizzard.internal
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sonarr
              port:
                number: 8989
  tls:
    - hosts:
        - sonarr.apps.blizzard.internal
      secretName: sonarr-certificate-tls
